[workspace]
members = ["./rust", "rust/kalt_macros", "./rust_bindings"]
resolver = "3"

[workspace.package]
edition = "2024"
authors = ["Uhrendoktor"]
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
sertyp = { path = "../sertyp/rust", features = ["content"], version = "0.1.5" }
kalt = { path = "./rust", version = "0.1.0" }
chumsky = { version = "0.13.0", features = ["pratt"] }
