[package]
name = "kalt"
edition.workspace = true
authors.workspace = true
version.workspace = true
license.workspace = true
description = "Advanced equation parsing and evaluation for nested typst equations"

[lib]
crate-type = ["lib"]

[dependencies]
kalt_macros = { path = "./kalt_macros", version = "0.1.0" }
chumsky = { workspace = true }
num-traits = "0.2.19"
derive_more = "2.1.1"
sertyp = { workspace = true }
num = "0.4.3"
ndarray = "0.17.2"
paste = "1.0.15"
