[package]
name = "kalt_bindings"
edition.workspace = true
authors.workspace = true
version.workspace = true
license.workspace = true
description = "Typst Bindings for kalt"

[lib]
crate-type = ["cdylib"]
name = "bindings"

[profile.release]
panic = "unwind"
opt-level = 1
lto = false

[dependencies]
wasm-minimal-protocol = "0.2.0"
sertyp = { workspace = true }
kalt = { workspace = true }
chumsky = { workspace = true }
